--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,36 @@
 html {
-    background: url('background.jpg')
+    background: url('background.jpg');
+    font-size: 10px;
+    background-size: cover;
+}
+
+.keys {
+    min-height: 100vh;
+    display:flex;
+    flex:1;
+    align-items: center;
+    justify-content: center;
+}
+
+.key {
+    border:0.4rem;
+    font-size:1.4rem;
+    color:white;
+    padding:1.5rem;
+    margin:1.5rem;
+    border-radius: 0.5rem;
+    width:10rem;
+    text-align: center;
+    border:solid black;
+    background:rgba(0,0,0,0.5)
+}
+
+kbd {
+    display: block;
+    font-size: 4rem;
+  }
+
+.sound {
+    font-size: 1.2rem;
+    color:#ffc600;
 }
